--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react": "^19.1.0",
     "react-day-picker": "9.8.1",
     "react-dom": "^19.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.57.0",
     "react-intersection-observer": "^9.16.0",
     "react-resizable-panels": "^3.0.2",
